--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -6,9 +6,9 @@
     <dimen name="textsize_30sp">30sp</dimen>
     <dimen name="textsize_25sp">25sp</dimen>
     <dimen name="textsize_21sp">21sp</dimen>
-    <dimen name="textsize_24sp">24sp</dimen>
-    <dimen name="textsize_20sp">40sp</dimen>
-    <dimen name="textsize_14sp">14sp</dimen>
+    <dimen name="textsize_24sp">32sp</dimen>
+    <dimen name="textsize_20sp">26sp</dimen>
+    <dimen name="textsize_14sp">18</dimen>
     <dimen name="textsize_13sp">13sp</dimen>
 
     <dimen name="size_5dp">5dp</dimen>
@@ -23,8 +23,8 @@
     <dimen name="size_48dp">48dp</dimen>
     <dimen name="size_64">64dp</dimen>
     <dimen name="size_104dp">104dp</dimen>
-    <dimen name="size_216dp">216dp</dimen>
-    <dimen name="size_206dp">206dp</dimen>
-    <dimen name="size_60">60dp</dimen>
+    <dimen name="size_216dp">288dp</dimen>
+    <dimen name="size_206dp">274dp</dimen>
+    <dimen name="size_60">90dp</dimen>
 
 </resources>
