--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -8,20 +8,20 @@
     <dimen name="textsize_21sp">21sp</dimen>
     <dimen name="textsize_24sp">32sp</dimen>
     <dimen name="textsize_20sp">26sp</dimen>
-    <dimen name="textsize_14sp">18</dimen>
+    <dimen name="textsize_14sp">18sp</dimen>
     <dimen name="textsize_13sp">13sp</dimen>
 
-    <dimen name="size_5dp">5dp</dimen>
-    <dimen name="size_10dp">10dp</dimen>
-    <dimen name="size_12dp">12dp</dimen>
-    <dimen name="size_20dp">20dp</dimen>
-    <dimen name="size_22dp">22dp</dimen>
-    <dimen name="size_24dp">24dp</dimen>
-    <dimen name="size_30dp">30dp</dimen>
-    <dimen name="size_35dp">35dp</dimen>
-    <dimen name="size_40dp">40dp</dimen>
-    <dimen name="size_48dp">48dp</dimen>
-    <dimen name="size_64">64dp</dimen>
+    <dimen name="size_5dp">10dp</dimen>
+    <dimen name="size_10dp">15dp</dimen>
+    <dimen name="size_12dp">18dp</dimen>
+    <dimen name="size_20dp">28dp</dimen>
+    <dimen name="size_22dp">30dp</dimen>
+    <dimen name="size_24dp">32dp</dimen>
+    <dimen name="size_30dp">38dp</dimen>
+    <dimen name="size_35dp">42dp</dimen>
+    <dimen name="size_40dp">48dp</dimen>
+    <dimen name="size_48dp">56dp</dimen>
+    <dimen name="size_64">75dp</dimen>
     <dimen name="size_104dp">104dp</dimen>
     <dimen name="size_216dp">288dp</dimen>
     <dimen name="size_206dp">274dp</dimen>
