--- a/app/src/main/res/layout-land/activity_call1.xml
+++ b/app/src/main/res/layout-land/activity_call1.xml
@@ -19,11 +19,14 @@
             android:textStyle="bold" />
     </LinearLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/tvTime"
-        android:layout_below="@+id/div1">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/div1"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="@dimen/size_10dp"
+        android:gravity="center"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="@dimen/size_216dp"
@@ -35,22 +38,22 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_avtcall"
-                android:scaleType="centerInside"/>
+                android:scaleType="centerInside"
+                android:src="@drawable/ic_avtcall" />
         </LinearLayout>
-    </RelativeLayout>
 
-    <TextView
-        android:id="@+id/tvTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/lnCallOff"
-        android:layout_centerInParent="true"
-        android:layout_marginBottom="@dimen/size_104dp"
-        android:text="Outgoing Call"
-        android:textColor="@color/white"
-        android:textSize="@dimen/textsize_14sp"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/tvTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/lnCallOff"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="@dimen/size_10dp"
+            android:text="Outgoing Call"
+            android:textColor="@color/white"
+            android:textSize="@dimen/textsize_14sp"
+            android:textStyle="bold" />
+    </LinearLayout>
 
 
     <LinearLayout
