--- a/app/src/main/res/layout-sw600dp-land/fragment_register.xml
+++ b/app/src/main/res/layout-sw600dp-land/fragment_register.xml
@@ -1,90 +1,142 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rlHideKeyboard"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/img_background"
-    tools:context=".MainActivity"
-    android:layout_weight="1">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="0.7"
-        android:orientation="vertical"
-        android:gravity="center">
-        <ImageView
-            android:id="@+id/imgLogo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/size_30dp"
-            android:background="@drawable/ic_logo" />
-
-        <TextView
-            android:id="@+id/tvNameApp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/imgLogo"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="@dimen/size_30dp"
-            android:text="@string/name_app"
-            android:textColor="@color/white"
-            android:textSize="@dimen/textsize_25sp" />
-    </LinearLayout>
-
+    android:orientation="horizontal"
+    tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:layout_weight="0.3"
-        android:orientation="vertical"
-        android:layout_margin="@dimen/size_20dp">
+        android:weightSum="1">
 
-        <EditText
-            android:id="@+id/edtUserName"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/size_40dp"
-            android:layout_marginBottom="@dimen/size_10dp"
-            android:background="@drawable/shape_editext"
-            android:hint="@string/email"
-            android:paddingLeft="@dimen/size_10dp"/>
+            android:layout_height="match_parent"
+            android:layout_weight="0.6"
+            android:gravity="center"
+            android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/edtPassword"
+            <ImageView
+                android:id="@+id/imgLogo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/size_30dp"
+                android:background="@drawable/ic_logo" />
+
+            <TextView
+                android:id="@+id/tvNameApp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/imgLogo"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="@dimen/size_30dp"
+                android:text="@string/name_app"
+                android:textColor="@color/white"
+                android:textSize="@dimen/textsize_25sp" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/size_40dp"
-            android:layout_marginBottom="@dimen/size_10dp"
-            android:background="@drawable/shape_editext"
-            android:hint="@string/password"
-            android:inputType="textPassword"
-            android:paddingLeft="@dimen/size_10dp" />
+            android:layout_height="wrap_content"
+            android:layout_weight="0.4">
 
-        <EditText
-            android:id="@+id/edtConfirmPassword"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/size_40dp"
-            android:layout_marginBottom="@dimen/size_10dp"
-            android:background="@drawable/shape_editext"
-            android:hint="@string/confirm_password"
-            android:inputType="textPassword"
-            android:paddingLeft="@dimen/size_10dp" />
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scrollbars="none">
 
-        <Button
-            android:id="@+id/btnJoinNow"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/size_48dp"
-            android:layout_marginBottom="@dimen/size_10dp"
-            android:background="@drawable/shape_button_sigin"
-            android:paddingLeft="@dimen/size_10dp"
-            android:text="@string/join_now"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="@dimen/textsize_13sp"
-            android:textStyle="bold" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="@dimen/size_20dp"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <EditText
+                        android:id="@+id/edtFullName"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/size_40dp"
+                        android:layout_marginBottom="@dimen/size_10dp"
+                        android:background="@drawable/shape_editext"
+                        android:hint="@string/fullname"
+                        android:paddingLeft="@dimen/size_10dp"
+                        android:textColor="@color/back1"
+                        android:textColorHint="@color/text_hint"
+                        android:textCursorDrawable="@drawable/color_cursor" />
+
+                    <EditText
+                        android:id="@+id/edtPhoneNumber"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/size_40dp"
+                        android:layout_marginBottom="@dimen/size_10dp"
+                        android:background="@drawable/shape_editext"
+                        android:hint="@string/phonenumber"
+                        android:inputType="number"
+                        android:paddingLeft="@dimen/size_10dp"
+                        android:textColor="@color/back1"
+                        android:textColorHint="@color/text_hint"
+                        android:textCursorDrawable="@drawable/color_cursor" />
 
 
+                    <EditText
+                        android:id="@+id/edtEmail"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/size_40dp"
+                        android:layout_marginBottom="@dimen/size_10dp"
+                        android:background="@drawable/shape_editext"
+                        android:hint="@string/email"
+                        android:paddingLeft="@dimen/size_10dp"
+                        android:textColor="@color/back1"
+                        android:textColorHint="@color/text_hint"
+                        android:textCursorDrawable="@drawable/color_cursor" />
+
+                    <EditText
+                        android:id="@+id/edtPassword"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/size_40dp"
+                        android:layout_marginBottom="@dimen/size_10dp"
+                        android:background="@drawable/shape_editext"
+                        android:hint="@string/password"
+                        android:inputType="textPassword"
+                        android:paddingLeft="@dimen/size_10dp"
+                        android:textColor="@color/back1"
+                        android:textColorHint="@color/text_hint"
+                        android:textCursorDrawable="@drawable/color_cursor" />
+
+                    <EditText
+                        android:id="@+id/edtConfirmPassword"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/size_40dp"
+                        android:layout_marginBottom="@dimen/size_10dp"
+                        android:background="@drawable/shape_editext"
+                        android:hint="@string/confirm_password"
+                        android:inputType="textPassword"
+                        android:paddingLeft="@dimen/size_10dp"
+                        android:textColor="@color/back1"
+                        android:textColorHint="@color/text_hint"
+                        android:textCursorDrawable="@drawable/color_cursor" />
+
+                    <Button
+                        android:id="@+id/btnJoinNow"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/size_48dp"
+                        android:layout_marginBottom="@dimen/size_10dp"
+                        android:background="@drawable/shape_button_sigin"
+                        android:paddingLeft="@dimen/size_10dp"
+                        android:text="@string/join_now"
+                        android:textAllCaps="false"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/textsize_20sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+            </ScrollView>
+        </LinearLayout>
     </LinearLayout>
 
 
-
-</LinearLayout>
+</RelativeLayout>
