--- a/app/src/main/res/menu/popup_menu.xml
+++ b/app/src/main/res/menu/popup_menu.xml
@@ -1,22 +1,29 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MainActivity">
     <item
-        android:id="@+id/callApp"
-        android:title="Call App"
-        android:icon="@drawable/icpop_callappp"/>
+        android:id="@+id/action_more"
+        android:icon="@android:drawable/ic_menu_more"
+        android:orderInCategory="1"
+        android:title="">
+        <item
+            android:id="@+id/callApp"
+            android:icon="@drawable/icpop_callapp"
+            android:title="Call App" />
 
-    <item
-        android:id="@+id/callPhone"
-        android:icon="@drawable/icpop_calllogs"
-        android:title="Call Phone"/>
+        <item
+            android:id="@+id/callPhone"
+            android:icon="@drawable/icpop_calllogs"
+            android:title="Call Phone" />
 
-    <item
-        android:id="@+id/chat"
-        android:icon="@drawable/icpop_chat"
-        android:title="Chat"/>
-    <item
-        android:id="@+id/sms"
-        android:icon="@drawable/icpop_sms"
-        android:title="SMS"/>
+        <item
+            android:id="@+id/chat"
+            android:icon="@drawable/icpop_chat"
+            android:title="Chat" />
+        <item
+            android:id="@+id/sms"
+            android:icon="@drawable/icpop_sms"
+            android:title="SMS" />
+    </item>
 </menu>
