--- a/app/src/main/res/layout-land/activity_home.xml
+++ b/app/src/main/res/layout-land/activity_home.xml
@@ -4,11 +4,26 @@
     android:layout_height="match_parent"
     android:background="@color/background_home">
 
+    <RelativeLayout
+        android:id="@+id/tootlbarTop"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/size_40dp"
+        android:background="@color/back"
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_launcher"
+            android:layout_centerInParent="true"
+            android:layout_margin="2dp"
+            android:layout_alignParentLeft="true"/>
 
+    </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/tootlbarBot"
+        android:layout_below="@+id/tootlbarTop"
         android:orientation="vertical">
 
         <LinearLayout
@@ -28,13 +43,14 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:background="@color/back"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/imgAddmoney"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_addmoney" />
+                    android:src="@drawable/ic_addmoney"
+                    android:layout_weight="1"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -42,7 +58,8 @@
                     android:text="Text"
                     android:textColor="@color/gray"
                     android:textSize="@dimen/textsize_20sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:layout_weight="1"/>
 
             </LinearLayout>
 
@@ -57,13 +74,14 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:background="@color/back"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/imgSetting"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_setting" />
+                    android:src="@drawable/ic_setting"
+                    android:layout_weight="1" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -71,7 +89,8 @@
                     android:text="Text"
                     android:textColor="@color/gray"
                     android:textSize="@dimen/textsize_20sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:layout_weight="1" />
             </LinearLayout>
         </LinearLayout>
 
@@ -92,13 +111,14 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:background="@color/back"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/imgCalllog"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_callphone" />
+                    android:src="@drawable/ic_callphone"
+                    android:layout_weight="1" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -106,7 +126,8 @@
                     android:text="Text"
                     android:textColor="@color/gray"
                     android:textSize="@dimen/textsize_20sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:layout_weight="1"/>
             </LinearLayout>
 
             <LinearLayout
@@ -120,13 +141,14 @@
                 android:gravity="center"
                 android:layout_weight="1"
                 android:background="@color/back"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/imgCall"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_callapp" />
+                    android:src="@drawable/ic_callapp"
+                    android:layout_weight="1" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -134,7 +156,8 @@
                     android:text="Text"
                     android:textColor="@color/gray"
                     android:textSize="@dimen/textsize_20sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:layout_weight="1" />
             </LinearLayout>
         </LinearLayout>
 
@@ -155,13 +178,14 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:background="@color/back"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/imgMessenger"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_chat" />
+                    android:src="@drawable/ic_chat"
+                    android:layout_weight="1"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -169,7 +193,8 @@
                     android:text="Text"
                     android:textColor="@color/gray"
                     android:textSize="@dimen/textsize_20sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:layout_weight="1"/>
             </LinearLayout>
 
             <LinearLayout
@@ -183,13 +208,14 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:background="@color/back"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/imgInbox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_sms" />
+                    android:src="@drawable/ic_sms"
+                    android:layout_weight="1" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -197,7 +223,8 @@
                     android:text="Text"
                     android:textColor="@color/gray"
                     android:textSize="@dimen/textsize_20sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:layout_weight="1"/>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
