--- a/app/src/main/res/layout-sw600dp/activity_list_contact.xml
+++ b/app/src/main/res/layout-sw600dp/activity_list_contact.xml
@@ -5,7 +5,30 @@
     android:background="@drawable/img_background"
     android:orientation="vertical"
     tools:context=".MainActivity">
+    <RelativeLayout
+        android:id="@+id/tootlbarTop"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/size_40dp"
+        android:background="@color/back"
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_launcher"
+            android:layout_centerInParent="true"
+            android:layout_margin="2dp"
+            android:layout_alignParentLeft="true"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_toRightOf="@+id/logo"
+            android:textSize="@dimen/textsize_14sp"
+            android:text="List Contact"
+            android:textColor="@color/white"/>
 
+    </RelativeLayout>
     <ListView
         android:id="@+id/listview"
         android:layout_width="match_parent"
