--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -3,12 +3,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_home">
+    <RelativeLayout
+        android:id="@+id/tootlbarTop"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/size_40dp"
+        android:background="@color/back"
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_launcher"
+            android:layout_centerInParent="true"
+            android:layout_margin="2dp"
+            android:layout_alignParentLeft="true"/>
 
-
+    </RelativeLayout>
     <LinearLayout
+        android:id="@+id/div1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/tootlbarBot"
+        android:layout_below="@+id/tootlbarTop"
         android:orientation="vertical">
 
         <LinearLayout
