--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -1,39 +1,42 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="72dp"
+    android:layout_height="@dimen/size_64"
     android:background="@drawable/shape_item_list"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/imgAvr"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/size_60"
+        android:layout_height="@dimen/size_60"
         android:layout_alignParentLeft="true"
         android:layout_centerInParent="true"
         android:layout_marginLeft="@dimen/size_5dp"
-        android:background="@drawable/ic_avatar" />
+        android:scaleType="centerInside"
+        android:src="@drawable/ic_avatar" />
 
 
-    <com.example.admin.prclosechat_android.view.AutoResizeTextView
+    <com.example.admin.prclosechat_android.view.TextFitTextView
         android:id="@+id/tvUserName"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_marginLeft="@dimen/size_5dp"
+        android:layout_toLeftOf="@+id/event"
         android:layout_toRightOf="@+id/imgAvr"
         android:ellipsize="none"
         android:maxLines="1"
         android:text="Title"
         android:textColor="@color/back1"
-        android:textSize="@dimen/textsize_25sp"
-        android:textStyle="bold" />
+        android:textSize="@dimen/textsize_20sp"/>
+
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
+        android:layout_centerInParent="true"
         android:layout_marginRight="@dimen/size_10dp"
-        android:layout_centerInParent="true">
+        android:visibility="invisible">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -42,23 +45,26 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/event"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="@dimen/size_10dp"
         android:layout_alignParentRight="true"
         android:layout_centerInParent="true"
-        android:orientation="horizontal"
-        android:visibility="invisible">
+        android:layout_marginRight="@dimen/size_10dp"
+        android:orientation="horizontal">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:src="@drawable/ic_uncheck" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:src="@drawable/ic_check" />
     </LinearLayout>
+
 
 </RelativeLayout>
